Fix final Java 9+ remnants in ChildJvm, PerformanceBenchmarkIT, HeapRoundTripTest
- Replace var, Path.of, String.isBlank, String.repeat, List.of,
  try-with-resources on var in ChildJvm.java
- Replace String.repeat() in PerformanceBenchmarkIT.java

All Java 9+ features now eliminated from the codebase.

https://claude.ai/code/session_01UHzJZuUdL5vpz2QML1dc1f